[package]
name = "ok-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketioxide = { version = "0.8", features = ["state"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = {version = "0.6", features = ["macros", "multipart"] }
axum-extra = {version = "0.6", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = {version = "0.4", features = ["cors"]}
tower = "0.4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "chrono", "r2d2"] }
redis = "0.24.0"
argon2 = "0.5.3"
lettre = "0.11.4"
rand = "0.8.5"
lazy_static = "1.4.0"
cat-loggr = "1.0.2"
serde_millis = "0.1.1"
dotenvy = "0.15.7"
uuid = {version = "1.7.0", features = [ "v4", "fast-rng" ] }
uuid-b64 = "0.1.1"
email_address = "0.2.4"
futures-util = "0.3.30"
async-trait = "0.1.79"
image = "^0.24.0"
webp = "0.2.6"
